@@ -369,6 +369,9 @@ Core and builtins
 Library
 -------
 
+- #1269: fix a bug in pstats.add_callers() and add a unit test file for
+  pstats.
+
 - #1669: don't allow shutil.rmtree() to be called on a symlink to a
   directory.
 
